Fixed VS and added protobuf-guide

--- a/skycalm-analyzer/pom.xml
+++ b/skycalm-analyzer/pom.xml
@@ -120,6 +120,7 @@
         </plugin>
 
 		</plugins>
+		<sourceDirectory>${project.build.directory}/generated-sources/protobuf/java</sourceDirectory>
 	</build>
 
 </project>
