--- a/skycalm-analyzer/pom.xml
+++ b/skycalm-analyzer/pom.xml
@@ -73,54 +73,61 @@
 	</dependencies>
 
 	<build>
+	    <sourceDirectory>src/main/java</sourceDirectory>
 
-    	<extensions>
-    	    <extension>
-    	        <groupId>kr.motd.maven</groupId>
-    	        <artifactId>os-maven-plugin</artifactId>
-    	        <version>1.7.0</version>
-    	    </extension>
-    	</extensions>
+	    <extensions>
+	        <extension>
+	            <groupId>kr.motd.maven</groupId>
+	            <artifactId>os-maven-plugin</artifactId>
+	            <version>1.7.0</version>
+	        </extension>
+	    </extensions>
 
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<annotationProcessorPaths>
-						<path>
-							<groupId>org.springframework.boot</groupId>
-							<artifactId>spring-boot-configuration-processor</artifactId>
-						</path>
-					</annotationProcessorPaths>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
+	    <plugins>
+	        <plugin>
+	            <groupId>org.apache.maven.plugins</groupId>
+	            <artifactId>maven-compiler-plugin</artifactId>
+	            <version>3.10.1</version>
+	            <configuration>
+	                <source>17</source>
+	                <target>17</target>
+	                <annotationProcessorPaths>
+	                    <path>
+	                        <groupId>org.springframework.boot</groupId>
+	                        <artifactId>spring-boot-configuration-processor</artifactId>
+	                        <version>3.3.4</version>
+	                    </path>
+	                </annotationProcessorPaths>
+	            </configuration>
+	        </plugin>
 
-        <plugin>
-            <groupId>org.xolstice.maven.plugins</groupId>
-            <artifactId>protobuf-maven-plugin</artifactId>
-            <version>0.6.1</version>
-            <configuration>
-                <protocArtifact>com.google.protobuf:protoc:3.21.12:exe:${os.detected.classifier}</protocArtifact>
-                <pluginId>grpc-java</pluginId>
-                <pluginArtifact>io.grpc:protoc-gen-grpc-java:1.59.0:exe:${os.detected.classifier}</pluginArtifact>
-            </configuration>
-            <executions>
-                <execution>
-                    <goals>
-                        <goal>compile</goal>
-                        <goal>compile-custom</goal>
-                    </goals>
-                </execution>
-            </executions>
-        </plugin>
+	        <plugin>
+	            <groupId>org.springframework.boot</groupId>
+	            <artifactId>spring-boot-maven-plugin</artifactId>
+	            <configuration>
+	                <mainClass>com.skycalm.analyzer.SkycalmAnalyzerApplication</mainClass>
+	            </configuration>
+	        </plugin>
 
-		</plugins>
-		<sourceDirectory>${project.build.directory}/generated-sources/protobuf/java</sourceDirectory>
+	        <plugin>
+	            <groupId>org.xolstice.maven.plugins</groupId>
+	            <artifactId>protobuf-maven-plugin</artifactId>
+	            <version>0.6.1</version>
+	            <configuration>
+	                <protocArtifact>com.google.protobuf:protoc:3.21.12:exe:${os.detected.classifier}</protocArtifact>
+	                <pluginId>grpc-java</pluginId>
+	                <pluginArtifact>io.grpc:protoc-gen-grpc-java:1.59.0:exe:${os.detected.classifier}</pluginArtifact>
+	            </configuration>
+	            <executions>
+	                <execution>
+	                    <goals>
+	                        <goal>compile</goal>
+	                        <goal>compile-custom</goal>
+	                    </goals>
+	                </execution>
+	            </executions>
+	        </plugin>
+	    </plugins>
 	</build>
 
 </project>
