--- a/skycalm-gateway/pom.xml
+++ b/skycalm-gateway/pom.xml
@@ -35,12 +35,14 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<!--
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		-->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -51,6 +53,27 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+		    <groupId>net.devh</groupId>
+		    <artifactId>grpc-client-spring-boot-starter</artifactId>
+		    <version>2.15.0.RELEASE</version>
+		</dependency>
+
+		<!-- gRPC client dependency (из другого микросервиса) -->
+		<dependency>
+		    <groupId>com.skycalm</groupId>
+		    <artifactId>skycalm-analyzer</artifactId>
+		    <version>0.0.1-SNAPSHOT</version>
+		    <scope>compile</scope>
+		</dependency>
+
+		<dependency>
+		  <groupId>com.skycalm</groupId>
+		  <artifactId>skycalm-proto</artifactId>
+		  <version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
@@ -79,6 +102,16 @@
 					</excludes>
 				</configuration>
 			</plugin>
+
+        	<plugin>
+            	<groupId>org.springframework.boot</groupId>
+            	<artifactId>spring-boot-maven-plugin</artifactId>
+            	<version>3.4.4</version>
+            	<configuration>
+                	<mainClass>com.skycalm.gateway.SkycalmGatewayApplication</mainClass>
+            	</configuration>
+        	</plugin>
+
 		</plugins>
 	</build>
 
