--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,7 @@
   "java.compile.nullAnalysis.mode": "disabled",
   "java.autobuild.enabled": false,
   "maven.executable.path": "mvnw.cmd", // чтобы не использовал глобальный Maven
-  "files.autoSave": "off",
+  "files.autoSave": "afterDelay",
   "files.autoSaveDelay": 10000,
   "java.debug.settings.onBuildFailureProceed": true
 }
